;******************************************************************************
;*                                  OxCaml                                    *
;* -------------------------------------------------------------------------- *
;*                               MIT License                                  *
;*                                                                            *
;* Copyright (c) 2025 Jane Street Group LLC                                   *
;* opensource-contacts@janestreet.com                                         *
;*                                                                            *
;* Permission is hereby granted, free of charge, to any person obtaining a    *
;* copy of this software and associated documentation files (the "Software"), *
;* to deal in the Software without restriction, including without limitation  *
;* the rights to use, copy, modify, merge, publish, distribute, sublicense,   *
;* and/or sell copies of the Software, and to permit persons to whom the      *
;* Software is furnished to do so, subject to the following conditions:       *
;*                                                                            *
;* The above copyright notice and this permission notice shall be included    *
;* in all copies or substantial portions of the Software.                     *
;*                                                                            *
;* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR *
;* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,   *
;* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL    *
;* THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER *
;* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING    *
;* FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER        *
;* DEALINGS IN THE SOFTWARE.                                                  *
;******************************************************************************

; CR metaprogramming jrickard: This file has not been code reviewed

(library
 (name eval)
 (modes byte native)
 (libraries
  ; If you edit this list make sure to change
  ; extra_libraries_for_eval in optcompile.ml.
  jit
  ocamlcommon
  ocamlopttoplevel)
 (flags
  (:standard
   -extension=runtime_metaprogramming
   -strict-sequence
   -absname
   -bin-annot
   -safe-string
   -strict-formats))
 (ocamlopt_flags
  (:standard
   -requires-metaprogramming
   (:include %{project_root}/ocamlopt_flags.sexp)))
 (library_flags
  (:standard -linkall -ccopt %{read:../../natdynlinkops}))
 (foreign_stubs
  (language c)
  (names eval_stubs)))

(install
 (files
  (.eval.objs/native/eval.cmx as eval.cmx)
  eval.cmxa
  eval.a
  libeval_stubs.a
  eval.cmxs
  eval.cma
  (.eval.objs/byte/eval.cmi as eval.cmi)
  (.eval.objs/byte/eval.cmt as eval.cmt)
  (.eval.objs/byte/eval.cmti as eval.cmti))
 (section lib)
 (package ocaml))
