;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                        David Allsopp, Tarides                          *
;*                                                                        *
;*   Copyright 2024 David Allsopp Ltd.                                    *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
 (name test_in_prefix)
 (modes native)
 (enabled_if (= %{context_name} "default"))
 (modules
  toolchain harness compression environment cmdline testBytecodeBinaries
  testDynlink testLinkModes testRelocation testToplevel test_ld_conf
  test_in_prefix)
 (libraries ocamlbytecomp ocamlcommon)
  ; As in ocamltest/dune, we can't use otherlibs/unix with the system compiler,
  ; so the system unix is pulled in via flags rather than (libraries unix).
 (ocamlopt_flags (:standard -I +unix unix.cmxa)))

(rule
 (target main_in_c.o)
 (deps ../tools/main_in_c.c)
 (enabled_if (= %{context_name} "default"))
 (action
  (run %{cc} -I %{ocaml_where} -c ../tools/main_in_c.c -o main_in_c.o)))
