(include_subdirs unqualified)

(library
 (name flambda2_algorithms)
 (wrapped true)
 (instrumentation (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (names builtin_stubs)
  (flags
   ((:include %{project_root}/%{env:OC_CFLAGS_SEXP=oc_cflags.sexp})
    (:include %{project_root}/sharedlib_cflags.sexp)
    (:include %{project_root}/oc_cppflags.sexp))))
 (ocamlopt_flags
  (:standard
   (:include %{project_root}/ocamlopt_flags.sexp)
   (:include ocamlopt_flags.sexp)
   -O3
   -open
   Int_replace_polymorphic_compare))
 (libraries ocamlcommon))

; Regular OCaml Rule (first phase of bootstrapping)

(rule
 (targets ocamlopt_flags.sexp)
 (enabled_if
  (= %{context_name} "default"))
 (action
  (copy ocamlopt_upstream_flags.sexp %{targets})))

; OxCaml Rule

(rule
 (targets ocamlopt_flags.sexp)
 (enabled_if
  (= %{context_name} "main"))
 (action
  (copy ocamlopt_oxcaml_flags.sexp %{targets})))

(install
 (files
  (dllflambda2_algorithms_stubs.so as stublibs/dllflambda2_algorithms_stubs.so))
 (section lib)
 (package ocaml))
