(include_subdirs no)

(library
 (name flambda2_to_jsir)
 (wrapped true)
 (instrumentation (backend bisect_ppx))
 (ocamlopt_flags
  (:standard -O3 -open Int_replace_polymorphic_compare))
 (libraries
  ocamlcommon
  ocamloptcomp
  flambda2_bound_identifiers
  flambda2_cmx
  flambda2_identifiers
  flambda2_kinds
  flambda2_lattices
  flambda2_nominal
  flambda2_numbers
  flambda2_term_basics
  flambda2_terms
  flambda2_simplify_shared
  flambda2_ui))
