(rule
 (alias runtest)
 (enabled_if
  (= %{context_name} "main"))
 (deps select_float.ml)
 (action
  (run %{bin:ocamlopt.opt} %{deps} -c)))

; Test atomics with binary emitter - not supported on macOS

(executables
 (names atomics)
 (modules atomics)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (ocamlopt_flags
  (:standard -internal-assembler)))

(rule
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (targets atomics.out)
 (deps atomics.exe)
 (action
  (progn
   (with-outputs-to
    atomics.out
    (run ./atomics.exe)))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")
   (<> %{system} macosx)))
 (action
  (progn
   (diff empty.expected atomics.out))))


; Test arch_* intrinsics

(executables
 (names test_arch)
 (modules test_arch)
 (foreign_stubs (language c) (names perfmon_stubs))
 (enabled_if
   (= %{context_name} "main")))

(rule
 (enabled_if
   (= %{context_name} "main"))
 (targets test_arch.out)
 (deps test_arch.exe)
 (action
  (progn
   (with-outputs-to
    %{targets}
    (run ./test_arch.exe)))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")))
 (action
  (progn
   (diff test_arch.amd64.expected test_arch.out))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "arm64")))
 (action
  (progn
   (diff test_arch.arm64.expected test_arch.out))))

; Test crc
(executables
 (names test_crc)
 (modules test_crc)
 (foreign_stubs (language c) (names crc_stubs)
   (flags
   (:standard
   (:include flags.sexp)))
   )
 (enabled_if
   (= %{context_name} "main")))

(rule
 (enabled_if
   (= %{context_name} "main"))
 (targets test_crc.out)
 (deps test_crc.exe)
 (action
  (progn
   (with-outputs-to
    %{targets}
    (run ./test_crc.exe)))))

(rule
 (alias runtest)
 (enabled_if
   (= %{context_name} "main"))
 (action
  (progn
   (diff test_crc.expected test_crc.out))))


(rule
 (targets flags.sexp)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   flags.sexp
   (echo "-mavx2"))))

(rule
 (targets flags.sexp)
 (enabled_if
  (and
   (= %{context_name} "main")
   (<> %{architecture} "amd64")))
 (action
  (with-stdout-to
   flags.sexp
   (echo "()"))))
